# ciencia-dados-book

./: book_ciencia_dados.ipynb  main.py  my_df.json  pyproject.toml
.ipynb_checkpoints/: book_ciencia_dados-checkpoint.ipynb
