[tool.poetry]
name = "book-ciencia-dados"
version = "0.1.0"
description = ""
authors = ["Marcelo Cesar dos Santos <marcelocsantos7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.0"
seaborn = "^0.13.2"
plotly = "^5.24.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
